# scCross

./: .gitignore  .readthedocs.yml  LICENSE  README.md  env.yaml  pyproject.toml  readme.md  setup.py  train.py
data/: readme.md
data/COVID-19/: preprocess.py
data/human_cell_atlas/: preprocess  preprocess.py  preprocess.sh
data/matched_mouse_blood/: preprocess.py
data/matched_mouse_brain/: preprocess
data/matched_mouse_cortex/: preprocess.py
data/matched_mouse_lymnode/: preprocess.py
data/unmatched_mouse_brain/: preprocess  preprocess.py  preprocess.sh
data_preprocess/: preprocessing.ipynb
docs/: COVID-19.ipynb  api.rst  conf.py  dataprocess.py  human_cell_atlas.ipynb  index.rst  install.rst  matched_mouse_atherosclerotic_plaque_immune_cells.ipynb  matched_mouse_brain.ipynb  matched_mouse_cortex.ipynb  metrix.py  release.rst  train.py  tutorials.rst
docs/.ipynb_checkpoints/: preprocessing-checkpoint.ipynb  training-checkpoint.ipynb
examples/: matched_mouse_atherosclerotic_plaque_immune_cells.py  matched_mouse_cortex.ipynb  matched_mouse_lymphonodus.ipynb  readme.md  unmatched_mouse_cortex.ipynb
expeirment/: COVID-19.py  human_cell_atlas.py  matched_mouse_PBMC.py  matched_mouse_atherosclerotic_plaque_immune_cells.py  matched_mouse_blood.py  matched_mouse_brain.py  matched_mouse_cortex.py  matched_mouse_lymnode.py  matched_mouse_lymphonodus.py  mouse_blood.py  readme.md  unmatched_mouse_brain.py  unmatched_mouse_cortex.py
experiment/: COVID-19.py  human_cell_atlas.py
sccross/: __init__.py  data.py  genomics.py  metrics.py  utils.py
sccross/models/: __init__.py  cross.py  data.py  dx.py  layers.py  nn.py  sc.py  sccross.py  utils.py
sccross/models-bf/: __init__.py  sccross.py
sccross/models-last/: cross.py  sc.py  sccross.py
toutorial/benchmark/: training_matched_mouse_blood.ipynb  training_matched_mouse_brain.ipynb
toutorial/data_preprocessing/: data_preprocessing.ipynb
