[build-system]
requires = ["setuptools", "wheel", "flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sccross"
version = "1.0.1"
description = "Single cell multi-omics cross modal generation, multi-omics simulation and perturbation"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}

keywords = ["bioinformatics", "deep-learning", "single-cell", "single-cell-multiomics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.3",
    "pandas>=1.1",
    "matplotlib>=3.1.2",
    "seaborn>=0.9",
    "dill>=0.2.3",
    "tqdm>=4.27",
    "scikit-learn>=0.21.2",
    "statsmodels>=0.10",
    "parse>=1.3.2",
    "networkx>=2",
    "pynvml>=8.0.1",
    "torch>=1.8",
    "pytorch-ignite>=0.4.1",
    "tensorboardX>=1.4",
    "anndata>=0.7",
    "scanpy>=1.5",
    "pybedtools>=0.8.1",
    "h5py>=2.10",
    "sparse>=0.3.1",
    "packaging>=16.8",
    "leidenalg>=0.7",
    "episcanpy>=0.3.2"
]

[project.optional-dependencies]
doc = [
    "sphinx<4",
    "sphinx-autodoc-typehints<1.12",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx-rtd-theme",
    "ipython",
    "jinja2<3.1",
    "prompt-toolkit<3.0.0"
]
test = [
    "plotly",
    "pytest",
    "pytest-cov"
]

[project.urls]
Github = "https://github.com/Xiuhui-Yang/scCross"

[tool.flit.sdist]
exclude = [".*", "c*", "d*", "e*", "pa*", "t*", "T*"]
